# nlp-nets

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  environment.yml  main.py  pyproject.toml
.anng/: settings.json
.github/workflows/: ci.yml
blocks/: __init__.py  base_block.py  transformer_block.py
compiler/: __init__.py  base_compiler.py  builder.py  onnx_compiler.py  quantizer.py  torch_compile_compiler.py  torchscript_compiler.py
config/: __init__.py  resolver.py  schema.py
configs/: README.md  __init__.py  compiler_example.yaml  demo.yaml
data/: __init__.py  collator.py
engine/: __init__.py  data_factory.py  ema.py  inference.py  loggers.py  sanity_check.py  trainer.py
engine/metrics_modules/: __init__.py  builder.py
layers/: __init__.py  attention.py  base_layer.py  cosformer_attention.py  embeddings.py  feedforward.py  inla_attention.py  linear_attention.py  normalization.py  nystrom_attention.py  performer_attention.py  positional_encoding.py
loss_fn/: __init__.py  base_criteria.py  cross_entropy.py  mlm_loss.py
models/: __init__.py  base_model.py  builder.py
models/transformers/: __init__.py  bert.py  gpt.py  t5.py
optim/: __init__.py  optimizer_builder.py  scheduler_builder.py
tests/: __init__.py  test_baselines.py  test_blocks.py  test_compiler.py  test_layers.py  test_loss_fn.py  test_models.py  test_optim.py  test_trainer.py  test_visualization.py
tokenizer_factory/: __init__.py
tokenizers/: __init__.py  builder.py
utils/: __init__.py  config_helper.py  import_utils.py  logger.py  registry.py  seed.py  tokenizer_utils.py
visualization/: __init__.py  attention_visualizer.py  gradient_visualizer.py  model_viewer.py  weight_visualizer.py
